--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.cjs.json && tsc -p tsconfig.esm.json",
+    "build": "node scripts/use-lodash.js && tsc -p tsconfig.cjs.json && node scripts/use-lodash-es.js && tsc -p tsconfig.esm.json && node scripts/use-lodash.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "07akioni",
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "typescript": "^4.4.4"
   },
