--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "index.js",
   "scripts": {
     "build": "node scripts/use-lodash.js && tsc -p tsconfig.cjs.json && node scripts/use-lodash-es.js && tsc -p tsconfig.esm.json && node scripts/use-lodash.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest test/*"
   },
   "author": "07akioni",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.2",
     "axios": "^0.24.0",
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
   "dependencies": {
